--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -14,6 +14,25 @@
     <h1 class="govuk-heading-xl mv2" th:inline="text">[[${#dates.monthName(currentDate)}]]
         [[${#dates.format(currentDate, 'yyyy')}]]</h1>
 
+    <div class="govuk-grid-row">
+        <div class="govuk-grid-column-two-thirds">
+            <ul class="list pl0 ma0">
+                <li class="govuk-!-display-inline-block"><a
+                        th:href="@{/dashboard(date=${#dates.format(months.previousMonth, 'yyyy-MM-dd')})}"
+                        class="ma0 govuk-link govuk-heading-s right-arrow-left">Previous
+                    month</a></li>
+                <li class="govuk-!-display-inline-block"><a
+                        href="/select-month"
+                        class="ma0 govuk-link govuk-heading-s mh3">Jump to
+                    month</a></li>
+                <li class="govuk-!-display-inline-block"><a
+                        th:href="@{/dashboard(date=${#dates.format(months.nextMonth, 'yyyy-MM-dd')})}"
+                        class="ma0 govuk-link govuk-heading-s right-arrow-right">Next
+                    month</a></li>
+            </ul>
+        </div>
+    </div>
+
 </div>
 
 </body>
