--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -40,6 +40,11 @@
 
     <div th:replace="fragments/summary.html :: summary"></div>
 
+    <section class="mt5">
+        <h2 class="govuk-heading-m pt1 bt bw2">Journey summary</h2>
+        <div th:replace="fragments/journey-summary.html :: journeySummary"></div>
+    </section>
+
 </div>
 
 </body>
