--- a/src/main/resources/templates/fragments/move-by-type.html
+++ b/src/main/resources/templates/fragments/move-by-type.html
@@ -35,9 +35,9 @@
             </li>
             <li class="w-20 bl border-box">
                 <div class="pa3">
-                    <p class="govuk-heading-m mb1" th:inline="text">£[[${#numbers.formatDecimal(typeAndSummary.value.totalPriceInPounds, 0,
+                    <p class="govuk-heading-m mb1" th:inline="text">£[[${#numbers.formatDecimal(typeAndSummary.value.totalPriceInPounds, 1,
                         'COMMA', 2, 'POINT')}]]</p>
-                    <div class="pt3">
+                    <div class="pt3" th:if="${typeAndSummary.value.volumeUnpriced != 0}">
                         <span class="ttu govuk-body-s govuk-!-font-weight-bold govuk-colour-blue ba bw1 b--blue pa1">Pending price</span>
                     </div>
                 </div>
