P4-2368 summary page - percentage and JPC version
Change percentage wording to %
Remove JPC version

--- a/src/main/resources/templates/fragments/move-by-type.html
+++ b/src/main/resources/templates/fragments/move-by-type.html
@@ -9,9 +9,9 @@
             <li class="w-20 bl border-box">
                 <div class="pa3">
                     <p class="govuk-heading-m mb1" th:inline="text">[[${#numbers.formatDecimal(typeAndSummary.value.percentage * 100, 0,
-                        'COMMA', 0, 'POINT')}]]</p>
+                        'COMMA', 0, 'POINT')}]]%</p>
                     <div>
-                        <p class="govuk-body mv0">Percentage</p>
+                        <p class="govuk-body mv0">Of total moves</p>
                     </div>
                 </div>
             </li>
