P4-2368 summary page - query improvements
Rationale: for dashboard, don't select all moves for month.
Do the work in the database.

MoveQueryRepository.kt
Add queries to get unique journeys and to calculate summaries
Remove code that built up summary manually - now done in SQL

Change PricesSpreadsheetGenerator.kt to take DashboardService rather than MoveQueryRepository

Remove MovesAndSummary.kt because we now query for moves and summaries separately

Change ImportController (now badly named, must be renamed)
Downloading the spreadsheet now only takes the 1st day of the month as the date

--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -32,7 +32,7 @@
             </ul>
         </div>
         <div class="govuk-grid-column-one-third tr">
-            <a th:href="@{|/generate-prices-spreadsheet/${#strings.toLowerCase(supplier.name())}?moves_from=${#dates.format(startOfMonthDate, 'yyyy-MM-dd')}&moves_to=${#dates.format(endOfMonthDate, 'yyyy-MM-dd')}|}"
+            <a th:href="@{|/generate-prices-spreadsheet/${#strings.toLowerCase(supplier.name())}?moves_from=${#dates.format(startOfMonthDate, 'yyyy-MM-dd')}|}"
                th:attr="download=${'moves-' + #dates.monthName(startOfMonthDate) + '-' + #dates.format(endOfMonthDate, 'yyyy') + '.csv'}"
                class="ma0 govuk-link govuk-heading-s download-icon">Download all moves</a>
         </div>
@@ -47,7 +47,7 @@
 
     <section class="mt5">
         <h2 class="govuk-heading-m pt1 bt bw2">Moves by type</h2>
-        <div th:each="typeAndSummary: ${moveTypeToSummary}">
+        <div th:each="summary: ${summaries}">
             <div th:replace="fragments/move-by-type.html :: move"></div>
         </div>
     </section>
