--- a/src/main/resources/templates/fragments/move-by-type.html
+++ b/src/main/resources/templates/fragments/move-by-type.html
@@ -3,12 +3,12 @@
         <ul class="list pl0 flex mv0">
             <li class="flex-auto">
                 <div class="pa3">
-                    <a href="" class="govuk-heading-m govuk-link" th:text="${typeAndSummary.key.text}">${typeAndSummary.key.text}</a>
+                    <a href="" class="govuk-heading-m govuk-link" th:text="${summary.moveType.text}">${summary.moveType.text}</a>
                 </div>
             </li>
             <li class="w-20 bl border-box">
                 <div class="pa3">
-                    <p class="govuk-heading-m mb1" th:inline="text">[[${#numbers.formatDecimal(typeAndSummary.value.percentage * 100, 0,
+                    <p class="govuk-heading-m mb1" th:inline="text">[[${#numbers.formatDecimal(summary.percentage * 100, 0,
                         'COMMA', 0, 'POINT')}]]%</p>
                     <div>
                         <p class="govuk-body mv0">Of total moves</p>
@@ -17,7 +17,7 @@
             </li>
             <li class="w-20 bl border-box">
                 <div class="pa3">
-                    <p class="govuk-heading-m mb1" th:inline="text">[[${#numbers.formatDecimal(typeAndSummary.value.volumeUnpriced, 0,
+                    <p class="govuk-heading-m mb1" th:inline="text">[[${#numbers.formatDecimal(summary.volumeUnpriced, 0,
                         'COMMA', 0, 'POINT')}]]</p>
                     <div>
                         <p class="govuk-body mv0">Without prices</p>
@@ -26,7 +26,7 @@
             </li>
             <li class="w-20 bl border-box">
                 <div class="pa3">
-                    <p class="govuk-heading-m mb1" th:inline="text">[[${#numbers.formatDecimal(typeAndSummary.value.volume, 0, 'COMMA',
+                    <p class="govuk-heading-m mb1" th:inline="text">[[${#numbers.formatDecimal(summary.volume, 0, 'COMMA',
                         0, 'POINT')}]]</p>
                     <div>
                         <p class="govuk-body mv0">Total moves</p>
@@ -35,9 +35,9 @@
             </li>
             <li class="w-20 bl border-box">
                 <div class="pa3">
-                    <p class="govuk-heading-m mb1" th:inline="text">£[[${#numbers.formatDecimal(typeAndSummary.value.totalPriceInPounds, 1,
+                    <p class="govuk-heading-m mb1" th:inline="text">£[[${#numbers.formatDecimal(summary.totalPriceInPounds, 1,
                         'COMMA', 2, 'POINT')}]]</p>
-                    <div class="pt3" th:if="${typeAndSummary.value.volumeUnpriced != 0}">
+                    <div class="pt3" th:if="${summary.volumeUnpriced != 0}">
                         <span class="ttu govuk-body-s govuk-!-font-weight-bold govuk-colour-blue ba bw1 b--blue pa1">Pending price</span>
                     </div>
                 </div>
