--- a/src/main/resources/templates/fragments/summary.html
+++ b/src/main/resources/templates/fragments/summary.html
@@ -18,7 +18,7 @@
         </li>
         <li class="w-third pv2 mv2">
             <p class="govuk-body govuk-!-font-weight-bold white ma0">Supplier</p>
-            <div><p class="govuk-heading-m white ma0 pt1" th:text="SUPPLIER">SUPPLIER</p></div>
+            <div><p class="govuk-heading-m white ma0 pt1" th:text="${supplier}">${supplier}</p></div>
         </li>
     </ul>
 
