--- a/src/main/resources/templates/choose-supplier.html
+++ b/src/main/resources/templates/choose-supplier.html
@@ -14,7 +14,7 @@
     <h1 class="govuk-heading-xl mv2 pt2" th:inline="text">Choose a supplier</h1>
 
     <ul class="list pl3 pb5">
-        <li><a href="/choose-supplier/geoamey" class="govuk-link govuk-heading-m">GeoAmy</a></li>
+        <li><a href="/choose-supplier/geoamey" class="govuk-link govuk-heading-m">GEOAmey</a></li>
         <li><a href="/choose-supplier/serco" class="govuk-link govuk-heading-m">Serco</a></li>
     </ul>
 
