--- a/src/main/resources/templates/layout/base.html
+++ b/src/main/resources/templates/layout/base.html
@@ -53,12 +53,12 @@
                             <li class="moj-primary-navigation__item">
                                 <a class="moj-primary-navigation__link" href="#" aria-current="page">Move summary</a>
                             </li>
-                            <li class="moj-primary-navigation__item">
-                                <a class="moj-primary-navigation__link" href="#">Managing pricing</a>
-                            </li>
-                            <li class="moj-primary-navigation__item">
-                                <a class="moj-primary-navigation__link" href="#">Manage locations</a>
-                            </li>
+<!--                            <li class="moj-primary-navigation__item">-->
+<!--                                <a class="moj-primary-navigation__link" href="#">Managing pricing</a>-->
+<!--                            </li>-->
+<!--                            <li class="moj-primary-navigation__item">-->
+<!--                                <a class="moj-primary-navigation__link" href="#">Manage locations</a>-->
+<!--                            </li>-->
                         </ul>
                     </nav>
                 </div>
