P4-2426: List moves by type

--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -324,9 +324,19 @@
 .w-two-thirds { width: calc(100% / 1.5); }
 /* </widths> */
 
-.db {
-    display: block;
-}
+.dn { display: none; }
+.di { display: inline; }
+.db { display: block; }
+.dib { display: inline-block; }
+.dit { display: inline-table; }
+.dt { display: table; }
+.dtc { display: table-cell; }
+.dt-row { display: table-row; }
+.dt-row-group { display: table-row-group; }
+.dt-column { display: table-column; }
+.dt-column-group { display: table-column-group; }
+.dt--fixed { table-layout: fixed; width: 100%; }
+
 .ttu {
     text-transform: uppercase;
 }
