P4-2426 move summary and move page

--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -4,6 +4,12 @@
 .govuk-colour-blue {
     color: #1d70b8;
 }
+.govuk-colour-red {
+    color: #d4351c
+}
+.govuk-colour-green {
+    color: #00703c;
+}
 .white {
     color: white;
 }
