--- a/src/main/resources/templates/layout/base.html
+++ b/src/main/resources/templates/layout/base.html
@@ -51,7 +51,7 @@
                     <nav class="moj-primary-navigation" aria-label="Primary navigation">
                         <ul class="moj-primary-navigation__list">
                             <li class="moj-primary-navigation__item">
-                                <a class="moj-primary-navigation__link" href="#" aria-current="page">Move Summary</a>
+                                <a class="moj-primary-navigation__link" href="/dashboard" aria-current="page">Move summary</a>
                             </li>
 <!--                            <li class="moj-primary-navigation__item">-->
 <!--                                <a class="moj-primary-navigation__link" href="#">Managing pricing</a>-->
