--- a/src/main/resources/templates/fragments/move-summary.html
+++ b/src/main/resources/templates/fragments/move-summary.html
@@ -2,26 +2,26 @@
 
     <ul class="list ph0 bg-govuk-colour-blue flex mv1 flex-wrap w-100">
         <li class="w-25 pv2 mv2">
-            <p class="govuk-heading-m white ma0 pt1" th:inline="text">[[${#numbers.formatDecimal(summary.volume, 0, 'COMMA', 0, 'POINT')}]]</p>
-            <div><p class="govuk-body govuk-!-font-weight-bold white ma0">Total moves</p></div>
+            <p class="govuk-heading-l white ma0 pt1" th:inline="text">[[${#numbers.formatDecimal(summary.volume, 0, 'COMMA', 0, 'POINT')}]]</p>
+            <div><p class="govuk-heading-s govuk-!-font-weight-bold white ma0">Total moves</p></div>
         </li>
         <li class="w-25 pv2 mv2">
-            <p class="govuk-heading-m white ma0 pt1" th:inline="text">
+            <p class="govuk-heading-l white ma0 pt1" th:inline="text">
                 [[${#numbers.formatDecimal(summary.percentage * 100, 1, 'COMMA', 0, 'POINT')}]]%</p>
-            <div><p class="govuk-body govuk-!-font-weight-bold white ma0">of total moves</p></div>
+            <div><p class="govuk-heading-s govuk-!-font-weight-bold white ma0">of total moves</p></div>
         </li>
         <li class="w-25 pv2 mv2">
-            <p class="govuk-heading-m white ma0 pt1" th:inline="text">
+            <p class="govuk-heading-l white ma0 pt1" th:inline="text">
                 [[${#numbers.formatDecimal(summary.volumeUnpriced, 0, 'COMMA', 0, 'POINT')}]]</p>
-            <div><p class="govuk-body govuk-!-font-weight-bold white ma0">without prices</p></div>
+            <div><p class="govuk-heading-s govuk-!-font-weight-bold white ma0">without prices</p></div>
         </li>
         <li class="w-25 pv2 mv2">
-            <p class="govuk-heading-m white ma0 pt1" th:inline="text">
+            <p class="govuk-heading-l white ma0 pt1" th:inline="text">
                 £[[${#numbers.formatDecimal(summary.totalPriceInPounds, 1, 'COMMA', 2, 'POINT')}]]</p>
             <div class="pt3" th:if="${summary.volumeUnpriced != 0}">
-                <span class="ttu govuk-body-s govuk-!-font-weight-bold white ba bw1 b--white pa1 dib mb2">Pending price</span>
+                <span class="ttu govuk-heading-s govuk-!-font-weight-bold white ba bw1 b--white pa1 dib mb2">Pending price</span>
             </div>
-            <p class="govuk-body govuk-!-font-weight-bold white ma0">total price</p>
+            <p class="govuk-heading-s govuk-!-font-weight-bold white ma0">total price</p>
         </li>
     </ul>
 
