--- a/src/main/resources/templates/move.html
+++ b/src/main/resources/templates/move.html
@@ -14,8 +14,8 @@
     <div class="govuk-breadcrumbs ">
         <ol class="govuk-breadcrumbs__list">
             <li class="govuk-breadcrumbs__list-item">
-                <a class="govuk-breadcrumbs__link" href="/dashboard" th:inline="text">[[${#dates.monthName(startOfMonthDate)}]]
-                    [[${#dates.format(startOfMonthDate, 'yyyy')}]]</a>
+                <a class="govuk-breadcrumbs__link" href="/dashboard" th:inline="text">[[${#temporals.monthName(startOfMonthDate)}]]
+                    [[${#temporals.format(startOfMonthDate, 'yyyy')}]]</a>
             </li>
             <li class="govuk-breadcrumbs__list-item">
                 <a class="govuk-breadcrumbs__link" th:href="@{/moves-by-type/{moveType}(moveType=${move.moveType})}"
@@ -41,32 +41,32 @@
                         <dt class="govuk-summary-list__key">
                             NOMIS Person ID
                         </dt>
-                        <dd class="govuk-summary-list__value">???</dd>
+                        <dd class="govuk-summary-list__value" th:text="${null}?: 'No NOMIS Person ID issued'"></dd>
                     </div>
                     <div class="govuk-summary-list__row">
                         <dt class="govuk-summary-list__key">
                             First
                         </dt>
-                        <dd class="govuk-summary-list__value" th:text="${move.firstNames}?: 'Not available'"></dd>
+                        <dd class="govuk-summary-list__value" th:text="${move.firstNames}?: 'Not known'"></dd>
                     </div>
                     <div class="govuk-summary-list__row">
                         <dt class="govuk-summary-list__key">
                             Last
                         </dt>
-                        <dd class="govuk-summary-list__value" th:text="${move.lastName}?: 'Not available'"></dd>
+                        <dd class="govuk-summary-list__value" th:text="${move.lastName}?: 'Not known'"></dd>
                     </div>
                     <div class="govuk-summary-list__row">
                         <dt class="govuk-summary-list__key">
                             Date of birth
                         </dt>
                         <dd class="govuk-summary-list__value"
-                            th:text="${move.dateOfBirth != null} ? ${#temporals.format(move.dateOfBirth, 'dd MM yyyy')} : 'Not available'"></dd>
+                            th:text="${move.dateOfBirth != null} ? ${#temporals.format(move.dateOfBirth, 'dd MM yyyy')} : 'Not known'"></dd>
                     </div>
                     <div class="govuk-summary-list__row">
                         <dt class="govuk-summary-list__key">
                             Gender
                         </dt>
-                        <dd class="govuk-summary-list__value" th:text="${move.gender}?: 'Not available'"></dd>
+                        <dd class="govuk-summary-list__value" th:text="${move.gender}?: 'Not known'"></dd>
                     </div>
                 </dl>
 
@@ -77,32 +77,34 @@
                             Move start
                         </dt>
                         <dd class="govuk-summary-list__value"
-                            th:text="${move.pickUpDateTime != null} ? ${#temporals.format(move.pickUpDateTime, 'dd MMM yyyy, HH:mm')} : 'Not available'"></dd>
+                            th:text="${move.pickUpDateTime != null} ? ${#temporals.format(move.pickUpDateTime, 'dd MMM yyyy, HH:mm')} : 'Not known'"></dd>
                     </div>
                     <div class="govuk-summary-list__row">
                         <dt class="govuk-summary-list__key">
                             Move end
                         </dt>
                         <dd class="govuk-summary-list__value"
-                            th:text="${move.dropOffOrCancelledDateTime != null} ? ${#temporals.format(move.dropOffOrCancelledDateTime, 'dd MMM yyyy, HH:mm')} : 'Not available'"></dd>
+                            th:text="${move.dropOffOrCancelledDateTime != null} ? ${#temporals.format(move.dropOffOrCancelledDateTime, 'dd MMM yyyy, HH:mm')} : 'Not known'"></dd>
                     </div>
                     <div class="govuk-summary-list__row">
                         <dt class="govuk-summary-list__key">
                             Move from
                         </dt>
-                        <dd class="govuk-summary-list__value" th:text="${move.fromSiteName}?: 'Not available'"></dd>
+                        <dd class="govuk-summary-list__value"
+                            th:text="${move.fromSiteName}?: ${move.fromNomisAgencyId}"></dd>
                     </div>
                     <div class="govuk-summary-list__row">
                         <dt class="govuk-summary-list__key">
                             Move to
                         </dt>
-                        <dd class="govuk-summary-list__value" th:text="${move.toSiteName}?: 'Not available'"></dd>
+                        <dd class="govuk-summary-list__value"
+                            th:text="${move.toSiteName}?: ${move.toNomisAgencyId}"></dd>
                     </div>
                     <div class="govuk-summary-list__row">
                         <dt class="govuk-summary-list__key">
                             Move type
                         </dt>
-                        <dd class="govuk-summary-list__value" th:text="${move.moveType}?: 'Not available'"></dd>
+                        <dd class="govuk-summary-list__value" th:text="${move.moveType}?: 'Not known'"></dd>
                     </div>
                     <div class="govuk-summary-list__row">
                         <dt class="govuk-summary-list__key">
@@ -114,7 +116,7 @@
                             <div th:case="*">
                                 <ul class="pl2">
                                     <li th:each="event: ${move.events}">
-                                        <span th:text="${event.type}"></span>,
+                                        <span th:replace="fragments/event-type.html :: eventType (type=${event.type})"></span>,
                                         <span th:text="${event.notes}?: '(no notes)'"></span>,
                                         <span th:text="${#temporals.format(event.occurredAt, 'dd MMM yyyy, HH:mm')}"></span>
                                     </li>
@@ -128,7 +130,8 @@
 
                     <div th:switch="${#lists.size(move.journeys)}">
                         <h2 th:case="'1'" class="govuk-heading-m ma0 pb2" th:inline="text">Journey details</h2>
-                        <h2 th:case="*" class="govuk-heading-m ma0 pb2" th:inline="text">Journey [[${iter.index + 1}]] of
+                        <h2 th:case="*" class="govuk-heading-m ma0 pb2" th:inline="text">Journey [[${iter.index + 1}]]
+                            of
                             [[${#lists.size(move.journeys)}]] details</h2>
                     </div>
 
@@ -137,27 +140,29 @@
                             <dt class="govuk-summary-list__key">
                                 Pick up location
                             </dt>
-                            <dd class="govuk-summary-list__value" th:text="${move.fromSiteName}?: 'Not available'"></dd>
+                            <dd class="govuk-summary-list__value"
+                                th:text="${move.fromSiteName}?: ${move.fromNomisAgencyId}"></dd>
                         </div>
                         <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key">
                                 Pick up location type
                             </dt>
                             <dd class="govuk-summary-list__value"
-                                th:text="${move.fromLocationType}?: 'Not available'"></dd>
+                                th:text="${move.fromLocationType}?: 'Not mapped'"></dd>
                         </div>
                         <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key">
                                 Drop off location
                             </dt>
-                            <dd class="govuk-summary-list__value" th:text="${move.toSiteName}?: 'Not available'"></dd>
+                            <dd class="govuk-summary-list__value"
+                                th:text="${move.toSiteName}?: ${move.toNomisAgencyId}"></dd>
                         </div>
                         <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key">
                                 Drop off location type
                             </dt>
                             <dd class="govuk-summary-list__value"
-                                th:text="${move.toLocationType}?: 'Not available'"></dd>
+                                th:text="${move.toLocationType}?: 'Not mapped'"></dd>
                         </div>
                         <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key">
@@ -169,7 +174,7 @@
                                 <div th:case="*">
                                     <ul class="pl2">
                                         <li th:each="event: ${journey.events}">
-                                            <span th:text="${event.type}"></span>,
+                                            <span th:replace="fragments/event-type.html :: eventType (type=${event.type})"></span>,
                                             <span th:text="${event.notes}?: '(no notes)'"></span>,
                                             <span th:text="${#temporals.format(event.occurredAt, 'dd MMM yyyy, HH:mm')}"></span>
                                         </li>
